syntax = "proto3";

import "google/protobuf/empty.proto";

package sorock;

// Update request to the `RaftApp`.
// This type of request is serialized in the log and processed sequentially.
// `request_id` is unique identifier of the request to avoid executing duplicating requests.
// Client may send a write requests twice but they are executed only once as long as
// they have the same `request_id`.
message WriteRequest {
  uint32 shard_id = 1;
  bytes message = 2;
  string request_id = 3;
}

// Read-only request to the `RaftApp`.
// This type of request is processed in optimized path.
message ReadRequest {
  uint32 shard_id = 1;
  bytes message = 2;
  bool read_locally = 3;
}

// Response from the `RaftApp`.
message Response {
  bytes message = 1;
}

message Clock {
  uint64 term = 1;
  uint64 index = 2;
}

message KernRequest {
  uint32 shard_id = 1;
  bytes message = 2;
}

message ReplicationStreamHeader {
  uint32 shard_id = 1;
  string sender_id = 2;
  Clock prev_clock = 3;
}
message ReplicationStreamEntry {
  Clock clock = 1;
  bytes command = 2;
}
message ReplicationStreamChunk {
  oneof elem {
    ReplicationStreamHeader header = 1;
    ReplicationStreamEntry entry = 2;
  }
}

message ReplicationStreamResponse {
  uint64 n_inserted = 1;
  uint64 log_last_index = 2;
}

message GetSnapshotRequest {
  uint32 shard_id = 1;
  uint64 index = 2;
}

message SnapshotChunk {
  bytes data = 1;
}

message VoteRequest {
  uint32 shard_id = 1;
  uint64 vote_term = 2;
  string candidate_id = 3;
  Clock candidate_clock = 4;
  bool force_vote = 5;
  bool pre_vote = 6;
}

message VoteResponse {
  bool vote_granted = 1;
}

message LeaderCommitState {
  uint64 leader_term = 1;
  uint64 leader_commit_index = 2;
}
message Heartbeat {
  string leader_id = 1;
  map<uint32, LeaderCommitState> leader_commit_states = 2;
}

// Request to add a Raft process with `server_id` to a shard.
message AddServerRequest {
  uint32 shard_id = 1;
  string server_id = 2;
}

// Request to remove a Raft process with `server_id` from a shard.
message RemoveServerRequest {
  uint32 shard_id = 1;
  string server_id = 2;
}

// On receiving this request, a server starts a new election
// to become a leader disregarding the election timeout.
// You can use this request to rebalance the leaders in the cluster.
message TimeoutNow {
  uint32 shard_id = 1;
}

service Raft {
  rpc Write(WriteRequest) returns (Response);
  rpc Read(ReadRequest) returns (Response);
  rpc ProcessKernRequest (KernRequest) returns (google.protobuf.Empty);
  rpc RequestVote (VoteRequest) returns (VoteResponse);
  rpc AddServer (AddServerRequest) returns (google.protobuf.Empty);
  rpc RemoveServer (RemoveServerRequest) returns (google.protobuf.Empty);
  rpc SendReplicationStream (stream ReplicationStreamChunk) returns (ReplicationStreamResponse);
  rpc GetSnapshot (GetSnapshotRequest) returns (stream SnapshotChunk);
  rpc SendHeartbeat (Heartbeat) returns (google.protobuf.Empty);
  rpc SendTimeoutNow (TimeoutNow) returns (google.protobuf.Empty);
}